# kleah

./: .dockerignore  .gitignore  Cargo.toml  README.markdown  README.md  docker-compose.yml  file.json  notes.txt
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-034808a1add00812b1f475cb47de36373bff7d29f83199a6aec1e1babd9ca6ac.json  query-0515173f544f27165627ed7d2bc7ff7385c668a5a93bac664ea98c8843d82504.json  query-07ca01830fa2c72d380e6ea924794f08077b2ba966d11e49e55722f9e87cfbf1.json  query-0944ff1dc1e3bf20a84b269edac9c2845d9a928dc8aea922534f1fb0a9b33054.json  query-0a2dd99a4f7d8f20deb766d881e5331c243c6c668c306c3e422c3d01af342b3b.json  query-0a48c7e5e88eae11f116856ed038e240669377f035f19a4abcf9b736cbb5f0dc.json  query-0f41bb4e14554c92d6af9067e89e74ae7f0fba75508bab30d83596b3a2171480.json  query-16a7217b8b3c651e8b37329e62ad0e0a7f0850a37fe07b4eb567650a7543abbd.json  query-23a6e493ab0e605e280de42ed2126ac94c56e7cc776713b2a96dd4bb241c97ee.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-270ac99e37d1671ffc2b25dee20008846d2c8a012b135e64381c1db344ebde08.json  query-288c6103fba7c3f8018f0838aa50d90d9d8880c3e0b52275763c68ee8f99f873.json  query-3893f8e652768564ba47fbfc43414989b5837c50c4f8dab027c11fb4130af302.json  query-38a0b48639579b357c94dcd968b20d34076c7b508341f03f1a8a40861a70e009.json  query-38ecf55d597ff1b52ec24559cee0187c2c523e23b4a06ca11655b0932e370859.json  query-3a075c8bb871c95f0faf69f19344fc68ed80198497fc0eda154b1e90d4bd2cd7.json  query-40674cba6871bd30fefbfb8fad5fdd9ab91915012ffe09c1794a0c35be62850e.json  query-42958e321d6d483229fd96ceb67bd33f76f7ae8f6068baa8fb8ec5a0568f8c93.json  query-42eb48829916c5d799cae383d9918dcc10840eb564be7ec424713ea672371c32.json  query-474b4ea1ec9db638144718cab36b2e4a790fa55cdaa50d23a16caebd13b09c90.json  query-48688e595a949236f35e7a41b547a0c0e19b6ec15937208c857d2ff5788e2a27.json  query-4a694bf5695f186748a5cea7fe5de46f2497a1a14039aad39cba57f6b71318d5.json  query-4cef732b2a2ef8e588bc6233375cf2d813e5eaed471d95a1f0e240448ec2be3f.json  query-502bc8cb43ba8d59fa25636a0c06f3f03d94c305b3e023829f0b3c8ab2e3ee08.json  query-52afdad6819b3c85972108e4755168e843043ffbce24d5c1f85709a3bb3d261a.json  query-5d3a3732ca78a7a02549d0a2c20ce02693d30fc672298b1292ae2e24f5b67b2a.json  query-5f0e40631959d8c73f05906471a43cde7000ed35e13c5789ccfcfb3118c78c7e.json  query-5f2450d45c872b049c826ba7116f2b591e4536cb8d378b083da6346cd7e92d1b.json  query-6abcf0c1d857c311f9a12ab7083aed2747bf09e4309d1d2690dde4f78a2d98c9.json  query-6de384048a40b32cf9ee8665f65c16cb3fc28ac4c6dc09967f9edd0294d04217.json  query-72b10465c7dc300b3b89580b3be19986579eaee8ee6538b473b5f586c01506c4.json  query-7b210484ad58791bb2a7512adf5640b9e7ac0a78530d653f1d783167f586cf19.json  query-82ba0effcad8dd56ded8bf1bca72e4f2eb6b13fc5c5a1d35dc0b1749546b2a56.json  query-8c07361018fee56fdc800f963a970edc333e9a7b7cf0e64184cae0e583a211fb.json  query-8caff78bec172709bd845346970be6fef96744f78152d1d25624cdee1e874f1f.json  query-8e5036af858c5443de0d650ad89473f3688bde779a6b6f9a00145103fc70714b.json  query-910310b1daf823d89910d30f3a5507adac77ddd198d8df871ef721408f6a54a7.json  query-9137b4845ca0920c4990617f8b301a916cba101fe18aad26f602ded789d32fc2.json  query-92ef3e936158879756f53a99f060993532ea947ffea6aef742b2a08bddc0ecec.json  query-942e7536a01fa8a1f8170d0e23ba9d472a43cb741efaddd4a18d53ae2935c43d.json  (+15 more)
backend/migrations/: 20241220213138_init.up.sql
backend/src/: lib.rs  main.rs
backend/starter/: starter.sh
kleah-backend/: Cargo.toml
kleah-backend/.sqlx/: query-030cff68a91c9fe309642091e3c76619afdedcf8b29e46c993811890ea16e38e.json  query-0c071338e5c8ae81ac67d5e1cb60286e4e6e061a60f1e27c69add5cf35f048f0.json  query-0f2bf0cb7bd6bfa09789e1a2bb304e63140236d7b3a67ffb8c5f93b750f63147.json  query-11e12ebe09821cc48fb6df50973288882e7fa995076bc82f0fe8f86ec654e4e5.json  query-1e7332ba8341fb260691019b1bea0cfa49047462608cf0b3071a6ec9508f3f59.json  query-2a17eba8d770f6ccebcc49a1960c6ae12d9a0b471d15b7e931d3e6ca826654ca.json  query-2aa5aaf60d8728747ab7e47c43a0b184130eeabda3ffd451c0beac67ea932354.json  (+28 more)
src/: lib.rs  (+1 more)
(+121 files in other folders)
