[package]
name = "kleah-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
pem = "3.0.5"
sha2 = "0.10.8"
actix-web = "4"
regex = "1.11.1"
chrono = "0.4.39"
bcrypt = "0.17.0"
openssl = "0.10.71"
actix-cors = "0.7.0"
serde_json = "1.0.139"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
cliply = { git = "https://github.com/alyxshang/cliply", tag = "v.0.1.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }

[dev-dependencies]
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }