[package]
name = "kleah-backend"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
authors = ["Alyx Shang"]
description= "The backend for a federated social platform for ancient creatures."
homepage = "https://github.com/alyxshang/kleah"
repository = "https://github.com/alyxshang/kleah"
documentation = "https://github.com/alyxshang/kleah"
readme = "../README.markdown"

[dependencies]
sha2 = "0.10.8"
actix-web = "4"
actix-cors = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
cliply = { git = "https://github.com/alyxshang/cliply", tag = "v.0.1.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }

[dev-dependencies]
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }