[package]
name = "kleah-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.4"
actix-web = "4"
serde_json = "1.0"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
