[package]
name = "kleah-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
pem = "3.0.5"
rsa = "0.9.8"
url = "2.5.4"
sha2 = "0.10.8"
pkcs1 = "0.7.5"
chrono = "0.4.38"
bcrypt = "0.17.0"
actix-web = "4"
serde_json = "1.0"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
