[package]
name = "kleah-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
openssl = "0.10.73"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
